Fix for buttong getting covered

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -41,6 +41,14 @@
 }
 */
 
+.plan-duration {
+    margin-bottom: 20px;
+}
+
+.plan-title {
+    height: 20px;
+}
+
 .required{
     color: orange;
 }
